# actix-web-auth

./: .env  Cargo.toml  README.md
migrations/: 20200819132330_create-tables.sql
src/: main.rs
src/config/: crypto.rs  mod.rs
src/db/: user.rs
